--- a/package.json
+++ b/package.json
@@ -18,21 +18,29 @@
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
+    "babel-preset-stage-1": "^6.24.1",
     "cross-env": "^5.1.4",
     "css-loader": "^0.28.11",
+    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.11",
+    "html-webpack-plugin": "^3.0.7",
+    "react-hot-loader": "^4.0.0",
+    "start-server-webpack-plugin": "^2.2.5",
     "style-loader": "^0.20.3",
     "url-loader": "^1.0.1",
-    "webpack": "^3.11.0",
+    "webpack": "^4.1.1",
+    "webpack-cli": "^2.0.12",
+    "webpack-dev-server": "^3.1.1",
     "webpack-node-externals": "^1.6.0"
   },
   "scripts": {
+    "startt": "webpack-dev-server",
     "start": "npm run webpack:client && npm run webpack:server && node dist/server.bundle.js",
     "webpack:client": "cross-env BABEL_DISABLE_CACHE=1 webpack --config webpack.config.client.js",
-    "webpack:server": "cross-env BABEL_DISABLE_CACHE=1 webpack --config webpack.config.server.js"
+    "webpack:server": "cross-env BABEL_DISABLE_CACHE=1 webpack --config webpack.config.server.js",
+    "start:server": "rm -rf ./build && webpack --config webpack.config.server.js"
   },
   "repository": {
     "type": "git",
